--- a/symfony-project/templates/navbarDev.html.twig
+++ b/symfony-project/templates/navbarDev.html.twig
@@ -11,6 +11,7 @@
 
 
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.min.css">
@@ -105,7 +106,7 @@
 			<!-- END nav -->
 		</div>
 		<!-- END container -->
-        {% block body %}{% endblock %}
+		{% block body %}{% endblock %}
 
 		<div class="site-footer text-white">
 			<div class="container">
