--- a/symfony-project/templates/offre/index.html.twig
+++ b/symfony-project/templates/offre/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'navbarDev.html.twig' %}
-{% block title %}Dashboard Développeur
+{% block title %}Offre
 {% endblock %}
 
 {% block body %}
