--- a/symfony-project/templates/base.html.twig
+++ b/symfony-project/templates/base.html.twig
@@ -32,10 +32,9 @@
 
 			<div class="container">
 
-
 				<nav class="site-nav">
 					<div class="logo">
-						<a href="{{path('app_home')}}" class="text-white">AdopteUnDev<span class="text-black">.</span>
+						<a href="index.html" class="text-black">AdopteUnDev<span class="text-black">.</span>
 						</a>
 					</div>
 					<div class="row align-items-center">
@@ -43,49 +42,45 @@
 						<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
 							<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
 								<li class="active">
-									<a href="{{path('app_developer')}}">Accueil</a>
+									<a class="text-black" href="{{path('app_company')}}" class="font-weight-bold">Accueil</a>
 								</li>
 								<li>
-									<a href="{{path('app_offre')}}">Offres</a>
+									<a class="text-black" href="{{path('app_profil')}}">Profils</a>
 								</li>
 								<li>
-									{% if app.session.get('user_id') is not empty %}
-										<a href="{{path('app_matching')}}">Matching</a>
-									{% endif %}
-
+									<a class="text-black" href="{{path('match-dev')}}">Matching</a>
 								</li>
 								<li>
-									<a href="{{ path('app_notifications') }}">
+									<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
+								</li>
+								<li>
+									<a class="text-black" href="{{ path('app_notifications_company') }}">
 										Notifications
 										<span class="icon-notifications"></span>
 									</a>
 								</li>
-								<li>
-								{% if app.session.get('user_id') is not empty %}
-										<a href="{{path('app_favori')}}">Favoris</a>
-									{% endif %}
-				
-								</li>
-
-								{# sdljsf #}
 
 								<li class="has-children">
-									<a href="#">Mon compte</a>
+									<a href="#" class="text-black">Mon compte</a>
 									<ul class="dropdown">
+										<li>
+											<a class="text-black" style="cursor:pointer;" href="{{path('app_dashboard')}}">
+											<i class="bi bi-gear"></i>
+											Paramètres</a>
+										</li>
+										<li>
+											<a class="text-black" href="{{path('app_favori')}}">
+											<i class="bi bi-heart"></i>
+											Favoris</a>
+											
+										</li>
+										<li>
+											<a class="text-black fw-bold" style="cursor:pointer;" href="{{ path('app_developer_login') }}">
+												<i class="bi bi-box-arrow-right"></i>
+												Déconnexion
+											</a>
+										</li>
 
-										{% if app.session.get('user_id') is not empty %}
-
-											<li>
-												<a class="text-black" style="cursor:pointer;" href="{{path('app_developer_profile')}}">Parametre</a>
-											</li>
-										{% else %}
-											<li>
-												<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
-											</li>
-											<li>
-												<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_inscription')}}">Inscription</a>
-											</li>
-										{% endif %}
 									</ul>
 								</li>
 							</ul>
@@ -95,97 +90,126 @@
 					</div>
 				</nav>
 
-</div>
+			</div>
 
-{% block body %}{% endblock %}
+			{% block body %}{% endblock %}
+			<div class="site-footer text-black">
+				<div class="container">
+					<div class="row justify-content-between">
+						<div class="col-lg-4">
+							<div class="widget">
+								<h3>À propos</h3>
+								<p class="text-black">
+									AdopteUnDev, la plateforme qui connecte développeurs talentueux et entreprises ambitieuses pour un matching parfait. Rejoignez-nous pour construire un avenir numérique collaboratif !
+								</p>
+							</div>
+							<div class="widget">
+								<h3>Restez connecté</h3>
+								<ul class="social list-unstyled">
+									<li>
+										<a href="#">
+											<span class="icon-facebook"></span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<span class="icon-twitter"></span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<span class="icon-instagram"></span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<span class="icon-linkedin"></span>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
 
-		<div class="site-footer text-white">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-4">
-						<div class="widget">
-							<h3>À propos</h3>
-							<p class="text-black">AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
+						<!-- Section Pour les entreprises -->
+						<div class="col-lg-2">
+							<div class="widget">
+								<h3>Pour les entreprises</h3>
+								<ul class="links list-unstyled">
+									<li>
+										<a href="#">Publier une offre</a>
+									</li>
+									<li>
+										<a href="#">Trouver un développeur</a>
+									</li>
+									<li>
+										<a href="#">Nos solutions</a>
+									</li>
+									<li>
+										<a href="#">Évaluer un développeur</a>
+									</li>
+									<li>
+										<a href="#">Assistance</a>
+									</li>
+								</ul>
+							</div>
 						</div>
-						<div class="widget">
-							<h3>Connectez-vous avec nous</h3>
-							<ul class="social list-unstyled">
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-facebook"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-twitter"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-instagram"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-linkedin"></span>
-									</a>
-								</li>
-							</ul>
+
+						<!-- Section Légal -->
+						<div class="col-lg-2">
+							<div class="widget">
+								<h3>Légal</h3>
+								<ul class="links list-unstyled">
+									<li>
+										<a href="#">Mentions légales</a>
+									</li>
+									<li>
+										<a href="#">Politique de confidentialité</a>
+									</li>
+									<li>
+										<a href="#">Conditions générales</a>
+									</li>
+									<li>
+										<a href="#">Politique de cookies</a>
+									</li>
+									<li>
+										<a href="#">FAQ</a>
+									</li>
+								</ul>
+							</div>
 						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="row">
-							<div class="col-12">
-								<div class="widget">
-									<h3>Navigation</h3>
-								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_offre')}}">Accueil</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Offres</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Matching</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Favoris</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Contact</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_offre')}}">À propos de nous</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Politique de confidentialité</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">FAQ</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Carrières</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Support</a>
-										</li>
-									</ul>
-								</div>
-							</div>
+					</div><!-- Bas de page --><div class="row mt-4">
+						<div class="col-12 text-center">
+							<p class="mb-0">
+								Copyright © AdopteUnDev 2024 - Tous droits réservés.
+								<a href="#">Mentions légales</a>
+								|
+								<a href="#">Cookies</a>
+								|
+								<a href="#">Confidentialité</a>
+							</p>
 						</div>
 					</div>
 				</div>
-
 			</div>
-		</div>
-</body></html>
+		</body>
+	</html>
+</div>
+<div id="overlayer"></div>
+<div class="loader">
+	<div class="spinner-border" role="status">
+		<span class="sr-only">Loading...</span>
+	</div>
+</div>
+<script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script>
+<script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script>
+<script src="{{asset("js/popper.min.js")}}"></script>
+<script src="{{asset("js/bootstrap.min.js")}}"></script>
+<script src="{{asset("js/owl.carousel.min.js")}}"></script>
+<script src="{{asset("js/aos.js")}}"></script>
+<script src="{{asset("js/imagesloaded.pkgd.js")}}"></script>
+<script src="{{asset("js/isotope.pkgd.min.js")}}"></script>
+<script src="{{asset("js/jquery.animateNumber.min.js")}}"></script>
+<script src="{{asset("js/jquery.stellar.min.js")}}"></script>
+<script src="{{asset("js/jquery.waypoints.min.js")}}"></script>
+<script src="{{asset("js/jquery.fancybox.min.js")}}"></script>
+<script src="{{asset("js/custom.js")}}"></script></body></html>
