--- a/symfony-project/templates/company/fiche-poste.html.twig
+++ b/symfony-project/templates/company/fiche-poste.html.twig
@@ -1,78 +1,8 @@
-<!DOCTYPE html>
-<html lang="fr">
+{% extends 'base.html.twig' %}
+{% block title %}Fiche de poste
+{% endblock %}
 
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="inscriptionor" content="Untree.co">
-		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
-
-		<meta name="description" content=""/>
-		<meta name="keywords" content="Boostrap"/>
-
-
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/owl.theme.default.min.css">
-		<link rel="stylesheet" href="fonts/icomoon/style.css">
-		<link rel="stylesheet" href="fonts/feather/style.css">
-		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
-		<link rel="stylesheet" href="css/aos.css">
-		<link rel="stylesheet" href="css/style.css">
-		<title>Créer une fiche de poste - AdopteUnDev</title>
-	</head>
-
-	<body>
-
-		<div class="container">
-			<nav class="site-nav">
-				<div class="logo">
-					<a class="text-black">AdopteUnDev<span class="text-black">.</span>
-					</a>
-				</div>
-				<div class="row align-items-center">
-
-					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
-						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-							<li>
-								<a class="text-black" href="{{path('app_company')}}">Accueil</a>
-							</li>
-							<li class="active">
-								<a class="text-black " href="{{path('app_profil')}}">Profils</a>
-							</li>
-							<li class="active">
-								<a class="text-black" href="{{path('match-dev')}}">Matching</a>
-							</li>
-							<li>
-								<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
-							</li>
-							<li>
-								<a class="text-black" href="{{ path('app_notifications_company') }}">
-									Notifications
-									<span class="icon-notifications"></span>
-								</a>
-							</li>
-							<li class="has-children">
-								<a href="#" class="text-black font-weight-bold">Mon compte</a>
-								<ul class="dropdown">
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('app_company_login')}}">Connexion</a>
-									</li>
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('inscription-company')}}">Inscription</a>
-									</li>
-								</ul>
-							</li>
-						</ul>
-
-					</div>
-
-				</div>
-			</nav>
-		</div>
+{% block body %}
 
 		<div class="register-container d-flex justify-content-center align-items-center" style="margin-top:10rem;">
 			<div class="register-card shadow p-4 rounded">
@@ -129,99 +59,5 @@
 				</form>
 			</div>
 		</div>
-
-		<div class="site-footer text-white">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-4">
-						<div class="widget">
-							<h3>À propos</h3>
-							<p class="text-black">AdopteUnDev transforme les idées en solutions numériques extraordinaires en connectant développeurs et entreprises pour un écosystème innovant et collaboratif.</p>
-						</div>
-						<div class="widget">
-							<h3>Connectez-vous avec nous</h3>
-							<ul class="social list-unstyled">
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-facebook"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-twitter"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-instagram"></span>
-									</a>
-								</li>
-								<li>
-									<a href="{{path('app_offre')}}">
-										<span class="icon-linkedin"></span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="row">
-							<div class="col-12">
-								<div class="widget">
-									<h3>Navigation</h3>
-								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_offre')}}">Accueil</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Offres</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Matching</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Favoris</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Contact</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="col-6 col-sm-6 col-md-4">
-								<div class="widget">
-									<ul class="links list-unstyled">
-										<li>
-											<a href="{{path('app_offre')}}">À propos de nous</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Politique de confidentialité</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">FAQ</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Carrières</a>
-										</li>
-										<li>
-											<a href="{{path('app_offre')}}">Support</a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</body>
-
-</html></div><div id="overlayer"></div><div class="loader">
-<div class="spinner-border" role="status">
-	<span class="sr-only">Loading...</span>
-</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+{% endblock %}
+		
