--- a/symfony-project/templates/matching/matching_entreprise.html.twig
+++ b/symfony-project/templates/matching/matching_entreprise.html.twig
@@ -1,263 +1,68 @@
-<!doctype html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="author" content="Untree.co">
-		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
+{% extends 'base.html.twig' %}
+{% block title %}Matching Company
+{% endblock %}
 
-		<meta name="description" content=""/>
-		<meta name="keywords" content="Boostrap"/>
+{% block body %}
 
 
-		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+	<div class="section-grey bg-light" id="blog-section" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem; margin-top:5rem">
 
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/owl.carousel.min.css">
-		<link rel="stylesheet" href="css/owl.theme.default.min.css">
-		<link rel="stylesheet" href="fonts/icomoon/style.css">
-		<link rel="stylesheet" href="fonts/feather/style.css">
-		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-		<link rel="stylesheet" href="css/jquery.fancybox.min.css">
-		<link rel="stylesheet" href="css/aos.css">
-		<link rel="stylesheet" href="css/style.css">
+		{% if company %}
+			<div class="container">
+				<div class="row">
+					<h2 class="font-weight-bold text-center">
+						<span class="text-primary">{{ company.nom }}</span>
+						matchez ces développeurs
 
-		<title>Job Teaser</title>
-	</head>
-	<body>
-
-		<div class="container">
-			<nav class="site-nav">
-				<div class="logo">
-					<a class="text-black">AdopteUnDev<span class="text-black">.</span>
-					</a>
+					</h2>
 				</div>
-				<div class="row align-items-center">
-
-					<div class="col-12 col-sm-12 col-lg-12 site-navigation text-center">
-						<ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu">
-							<li>
-								<a class="text-black" href="{{path('app_company')}}">Accueil</a>
-							</li>
-							<li class="active">
-								<a class="text-black " href="{{path('app_profil')}}">Profils</a>
-							</li>
-							<li class="active">
-								<a class="text-black font-weight-bold" href="{{path('match-dev')}}">Matching</a>
-							</li>
-							<li>
-								<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
-							</li>
-							<li>
-								<a class="text-black" href="{{ path('app_notifications_company') }}">
-									Notifications
-									<span class="icon-notifications"></span>
-								</a>
-							</li>
-							<li class="has-children">
-								<a href="#" class="text-black">Mon compte</a>
-								<ul class="dropdown">
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('app_company_login')}}">Connexion</a>
-									</li>
-									<li>
-										<a class="text-black" style="cursor:pointer;" href="{{path('inscription-company')}}">Inscription</a>
-									</li>
-								</ul>
-							</li>
-						</ul>
-
-					</div>
-
-				</div>
-			</nav>
-		</div>
-
-
-		<div class="section-grey bg-light" id="blog-section" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem; margin-top:5rem">
-
-			{% if company %}
 				<div class="container">
 					<div class="row">
-						<h2 class="font-weight-bold text-center">
-							<span class="text-primary">{{ company.nom }}</span>
-							matchez ces développeurs
+						{% if matches is empty %}
+							<p style="border-radius:0.3rem;" class="text-center text-white bg-info w-100 p-2">Aucun développeur ne correspond à vos offres pour l'instant.</p>
+						{% else %}
+							{% for match in matches %}
+								<div class="col-md-4">
+									<div class="card mb-3">
+										<div class="card-body">
+											<h5 class="card-title">{{ match.developer.nom }}
+												{{ match.developer.prenom }}</h5>
+											<p class="card-text">
+												<strong>Localisation :</strong>
+												{{ match.developer.localisation }}<br>
+												<strong>Expérience :</strong>
+												{{ match.developer.experience }}
+												ans<br>
+											</p>
 
-						</h2>
-					</div>
-					<div class="container">
-						<div class="row">
-							{% if matches is empty %}
-								<p style="border-radius:0.3rem;" class="text-center text-white bg-info w-100 p-2">Aucun développeur ne correspond à vos offres pour l'instant.</p>
-							{% else %}
-								{% for match in matches %}
-									<div class="col-md-4">
-										<div class="card mb-3">
-											<div class="card-body">
-												<h5 class="card-title">{{ match.developer.nom }}
-													{{ match.developer.prenom }}</h5>
-												<p class="card-text">
-													<strong>Localisation :</strong>
-													{{ match.developer.localisation }}<br>
-													<strong>Expérience :</strong>
-													{{ match.developer.experience }}
-													ans<br>
-												</p>
-
-												<h6 class="mt-3">Correspondance :
-												</h6>
-												<ul>
-													{% for jobMatch in match.matchingJobs %}
-														<li>
-															<strong>{{ jobMatch.job.titre }}</strong>
-															(Score :
-															{{ jobMatch.score }}%)
-														</li>
-													{% endfor %}
-												</ul>
-												<a href="{{ path('developer_detail', {id: match.developer.id}) }}" class="btn btn-primary text-white btn-sm">
-													Voir le profil
-												</a>
-											</div>
+											<h6 class="mt-3">Correspondance :
+											</h6>
+											<ul>
+												{% for jobMatch in match.matchingJobs %}
+													<li>
+														<strong>{{ jobMatch.job.titre }}</strong>
+														(Score :
+														{{ jobMatch.score }}%)
+													</li>
+												{% endfor %}
+											</ul>
+											<a href="{{ path('developer_detail', {id: match.developer.id}) }}" class="btn btn-primary text-white btn-sm">
+												Voir le profil
+											</a>
 										</div>
 									</div>
-								{% endfor %}
-							{% endif %}
-						</div>
-					</div>
-				</div>
-			{% else %}
-				<h2 class="text-center text-white bg-primary p-2">
-					<i class="fa fa-search"></i>
-					Recherche de développeurs
-				</h2>
-			{% endif %}
-		</div>
-
-
-		<div class="site-footer text-white">
-			<div class="container">
-				<div class="row justify-content-between">
-					<div class="col-lg-4">
-						<div class="widget">
-							<h3>À propos</h3>
-							<p class="text-black">
-								AdopteUnDev, la plateforme qui connecte développeurs talentueux et entreprises ambitieuses pour un matching parfait. Rejoignez-nous pour construire un avenir numérique collaboratif !
-							</p>
-						</div>
-						<div class="widget">
-							<h3>Restez connecté</h3>
-							<ul class="social list-unstyled">
-								<li>
-									<a href="#">
-										<span class="icon-facebook"></span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span class="icon-twitter"></span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span class="icon-instagram"></span>
-									</a>
-								</li>
-								<li>
-									<a href="#">
-										<span class="icon-linkedin"></span>
-									</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<div class="col-lg-2">
-						<div class="widget">
-							<h3>Pour les développeurs</h3>
-							<ul class="links list-unstyled">
-								<li>
-									<a href="#">Nous rejoindre</a>
-								</li>
-								<li>
-									<a href="#">Créer un profil</a>
-								</li>
-								<li>
-									<a href="#">Nos offres</a>
-								</li>
-								<li>
-									<a href="#">Favoris</a>
-								</li>
-								<li>
-									<a href="#">Contact support</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<!-- Section Pour les entreprises -->
-					<div class="col-lg-2">
-						<div class="widget">
-							<h3>Pour les entreprises</h3>
-							<ul class="links list-unstyled">
-								<li>
-									<a href="#">Publier une offre</a>
-								</li>
-								<li>
-									<a href="#">Trouver un développeur</a>
-								</li>
-								<li>
-									<a href="#">Nos solutions</a>
-								</li>
-								<li>
-									<a href="#">Évaluer un développeur</a>
-								</li>
-								<li>
-									<a href="#">Assistance</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-
-					<!-- Section Légal -->
-					<div class="col-lg-2">
-						<div class="widget">
-							<h3>Légal</h3>
-							<ul class="links list-unstyled">
-								<li>
-									<a href="#">Mentions légales</a>
-								</li>
-								<li>
-									<a href="#">Politique de confidentialité</a>
-								</li>
-								<li>
-									<a href="#">Conditions générales</a>
-								</li>
-								<li>
-									<a href="#">Politique de cookies</a>
-								</li>
-								<li>
-									<a href="#">FAQ</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-
-				<!-- Bas de page -->
-				<div class="row mt-4">
-					<div class="col-12 text-center">
-						<p class="mb-0">
-							Copyright © AdopteUnDev 2024 - Tous droits réservés.
-							<a href="#">Mentions légales</a>
-							|
-							<a href="#">Cookies</a>
-							|
-							<a href="#">Confidentialité</a>
-						</p>
+								</div>
+							{% endfor %}
+						{% endif %}
 					</div>
 				</div>
 			</div>
-		</div>
-	</body>
-</html></body></html></body></html></div><div id="overlayer"></div><div class="loader"><div class="spinner-border" role="status"><span class="sr-only">Loading...</span></div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
+		{% else %}
+			<h2 class="text-center text-white bg-primary p-2">
+				<i class="fa fa-search"></i>
+				Recherche de développeurs
+			</h2>
+		{% endif %}
+	</div>
+
+{% endblock %}
