--- a/symfony-project/templates/navbarDev.html.twig
+++ b/symfony-project/templates/navbarDev.html.twig
@@ -9,7 +9,6 @@
 		<meta name="description" content=""/>
 		<meta name="keywords" content="Boostrap"/>
 
-
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
@@ -98,11 +97,23 @@
 								<ul class="dropdown">
 									{% if app.session.get('user_id') is not empty %}
 										<li>
-											<a class="text-black" style="cursor:pointer;" href="{{path('app_dashboard')}}">Paramètres</a>
+											<a class="text-black" style="cursor:pointer;" href="{{path('app_dashboard')}}">
+											<i class="bi bi-gear"></i>
+											Paramètres</a>
 										</li>
 										<li>
-											<a class="text-black" href="{{path('app_favori')}}">Favoris</a>
+											<a class="text-black" href="{{path('app_favori')}}">
+											<i class="bi bi-heart"></i>
+											Favoris</a>
+											
 										</li>
+										<li>
+											<a class="text-black fw-bold" style="cursor:pointer;" href="{{ path('app_developer_login') }}">
+												<i class="bi bi-box-arrow-right"></i>
+												Déconnexion
+											</a>
+										</li>
+
 									{% else %}
 										<li>
 											<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_developer_login')}}">Connexion</a>
@@ -225,4 +236,4 @@
 </html></div><div id="overlayer"></div><div class="loader">
 <div class="spinner-border" role="status">
 	<span class="sr-only">Loading...</span>
-</div></div> <script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script> <script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script> <script src="{{asset("js/popper.min.js")}}"></script> <script src="{{asset("js/bootstrap.min.js")}}"></script> <script src="{{asset("js/owl.carousel.min.js")}}"></script> <script src="{{asset("js/aos.js")}}"></script> <script src="{{asset("js/imagesloaded.pkgd.js")}}"></script> <script src="{{asset("js/isotope.pkgd.min.js")}}"></script> <script src="{{asset("js/jquery.animateNumber.min.js")}}"></script> <script src="{{asset("js/jquery.stellar.min.js")}}"></script> <script src="{{asset("js/jquery.waypoints.min.js")}}"></script> <script src="{{asset("js/jquery.fancybox.min.js")}}"></script> <script src="{{asset("js/custom.js")}}"></script></body></html>
+</div></div><script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script><script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script><script src="{{asset("js/popper.min.js")}}"></script><script src="{{asset("js/bootstrap.min.js")}}"></script><script src="{{asset("js/owl.carousel.min.js")}}"></script><script src="{{asset("js/aos.js")}}"></script><script src="{{asset("js/imagesloaded.pkgd.js")}}"></script><script src="{{asset("js/isotope.pkgd.min.js")}}"></script><script src="{{asset("js/jquery.animateNumber.min.js")}}"></script><script src="{{asset("js/jquery.stellar.min.js")}}"></script><script src="{{asset("js/jquery.waypoints.min.js")}}"></script><script src="{{asset("js/jquery.fancybox.min.js")}}"></script><script src="{{asset("js/custom.js")}}"></script></body></html>
